# tilt-tui

./: .gitignore  .npmrc  AGENTS.md  CHANGELOG.md  GOALS.md  LICENSE  README.md  TODO.md  bunfig.toml  mise.toml  nx.json  package-lock.json  package.json  tiltApiTypes.ts  tsconfig.json
.github/workflows/: ci.yaml  release.yml
.nx/workflows/: agents.yaml
.opencode/plans/: button-form-modal.md
docs/: log-rendering-optimization.md
docs/features/: cheatsheet.md  github-releases.md  log-search.md  tree-nav.md  user-settings-v1.md  user-settings-v2.md
plans/: bubbletea.md  opentui-solid.md
prototypes/: .gitignore
prototypes/bubbletea/: go.mod  go.sum
prototypes/opentui-solid/: README.md  TODO.md  package.json  tsconfig.json
prototypes/ratatui/: Cargo.toml
prototypes/ratatui/src/: app.rs  main.rs  ui.rs
prototypes/ratatui/src/tilt/: client.rs  mod.rs  types.rs
src/: app.tsx  cli.ts  commands.ts  global-renderer.ts  index.tsx  keymap.ts
src/components/: button-form-modal.tsx  command-palette.tsx  dependency-tree-row.tsx  engine-info.tsx  error-fallback.tsx  footer.test.tsx  footer.tsx  header.test.tsx  header.tsx  keyboard-help.tsx  log-buffer-view-selection.test.ts  log-buffer-view.tsx  log-buffer.test.ts  log-buffer.ts  log-search-modal.test.ts  log-search-modal.tsx  log-selection.ts  pane-header.tsx  resource-info-modal.tsx  resource-picker.tsx  resource-status-dot.tsx  resourceview.tsx  status-counts.tsx  toast.tsx  tree.tsx
src/config/: user-settings.test.ts  user-settings.ts
src/context/: focus.tsx  tilt.tsx  toast.tsx
tilt-demo/: Tiltfile
(+71 files in other folders)
