[package]
name = "tilt-tui"
version = "0.1.0"
edition = "2021"
description = "Tilt TUI built with Ratatui"

[dependencies]
# Core TUI
ratatui = { version = "0.29.0", features = ["crossterm"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }

# Async runtime
tokio = { version = "1.37.0", features = ["full"] }
futures = "0.3.30"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

# Error handling
color-eyre = "0.6.3"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time formatting
chrono = { version = "0.4", features = ["serde"] }

# URL handling
url = "2.5"
urlencoding = "2.1"
